# Data-Structure-and-Algorithm-in-C-C-

./: .gitignore  Data_Structure_and_Algorithms.code-workspace  README.md
codility/cpp/exercise/: arr_list_len.cpp  bgst_longest_break_time.cpp  binary_gap.cpp  count_bounded_slices.cpp  count_conforming_bit_mask.cpp  sparse_binary_decomposition.cpp  tree_longest_zig_zag.cpp
codility/cpp/lessons/: arrays_cyclic_rotation.cpp  arrays_odd_occurrences_in_array.cpp  binary_search_algorithm_min_max_division.cpp  caterpillar_method_abs_distinct.cpp  caterpillar_method_count_distinct_slices.cpp  caterpillar_method_count_triangles.cpp  caterpillar_method_min_abs_sum_of_two.cpp  counting_elements_max_counters.cpp  counting_elements_missing_integer.cpp  counting_elements_perm_check.cpp  dynamic_programming_number_solitaire.cpp  euclidean_algorithm_chocolates_by_numbers.cpp  euclidean_algorithm_common_prime_divisors.cpp  fibonacci_numbers_fib_frog.cpp  fibonacci_numbers_ladder.cpp  greedy_algorithms_max_non_overlapping_segments.cpp  greedy_algorithms_tie_ropes.cpp  iterations_binary_gap.cpp  leader_dominator.cpp  leader_equi_leader.cpp  (+25 more)
leetcode/cpp/: CMakeLists.txt  cmake.bat  easy_algorithms.cpp  easy_algorithms.h  medium_algorithms.cpp  medium_algorithms.h
leetcode/cpp/gtest/: gtest_easy_algorithms.cpp  gtest_medium_algorithms.cpp  gtest_mock_easy_algorithms.h  gtest_mock_medium_algorithms.h  gtest_test_template.h
leetcode/cpp/scripts/: clean_build.ps1  cmake.ps1
leetcode/python/: common.py  easy_algorithms.py  medium_algorithms.py  test_utils.py  unit_test.py  utils.py
(+11 files in other folders)
